Release Notes

* 4/13/2016
  * changed resume/pauseTask to  activate/throttle jobs
  * fixed JG for pending tasks to release lock
  * fixed dump in ThreadUtils
  * imporved AtlasAJB to work with includedSite=''
  * improved unlockTasks to release tasks locked by dead processes
  * fixed oldPandaIDs in JG for job cloning and multiple consumers

* 4/12/2016
  * added splitRule to mapper attributes

* 4/10/2016
  * fixed sortParallelJobsBySite for oldPandaIDs

* 4/7/2016
  * added eventService to WQ

* 4/5/2016
  * fixed AtlasAJB to works with strings for excluded/includedSites
  * changed AtlasPPP to pause tasks when duplication is found

* 4/4/2016
  * added fractionFreeSpace to AtlasPTB
  * changed AtlasPTB to take fullRW into account for space estimation

* 3/31/2016
  * fixed AtlasAJB for ath releases
  * disabled to send scouts to non-short queues if site is set
  * fixed AtlasAJB for remote access not to ignore resource matching

* 3/30/2016
  * fixed prepareTasksToBeFinished_JEDI for scouting+noWaitParent
  * using assessmentTime for early avalanche

* 3/24/2016
  * fixed scoutJobData for ES
  * fixed retryTask for active exhausted tasks

* 3/23/2016
  * fixed JG to record retry history for multiple consumers
  * fixed JG for ddd:

* 3/21/2016
  * changed JS to take job multiplicity into account
  * fixed JRB to set implicit parameters for job cloning

* 3/17/2016
  * removed quote from error message for upstream
  * changed fatal errors in JG to temporary
  * added skipUnavailableFiles to InputChunk

* 3/16/2016
  * added rerefine to setOnHold
  * added putLogToOS
  * fixed AtlasTR to correctly set/unset transient to datasets

* 3/15/2016
  * set cloudToTask for tasks with no outputs
  * fixed updateByCF for tasks with no outputs
  * added isDistributedDataset
  * changed AtlasPJB to take into account the number of files to move
  * using dict instead of list in AGIS json

* 3/11/2016
  * changed AtlasPJB to take EC into account when walltime estimation